TestBasicLogOutput.java crashes due to EXCEPTION_ACCESS_VIOLATION in HandshakeThreadsOperation::do_handshake

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • b27
    • x86_64
    • windows
    • Verified

      The following test failed in the JDK14 CI:

      serviceability/logging/TestBasicLogOutput.java

      Here's a snippet from the log file:

      [1.686s][debug][thread,smr ] tid=25324: ThreadsSMRSupport::free_list: threads=0x0000006e783adae0 is freed.
      [1.686s][debug][os,thread,timer ] name='Signal Dispatcher', exit-phase1=53, exit-phase2=0, exit-phase3=0, exit-phase4=0
      [1.686s][debug][thread,smr ] tid=25324: ThreadsSMRSupport::smr_delete: thread=0x0000006e76e11800 is deleted.
      [1.686s][info ][os,thread ] Thread finished (tid: 25324).
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffdda973b06, pid=36392, tid=25992
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+27) (fastdebug build 14-ea+27-1269)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+27-1269, mixed mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
      # Problematic frame:
      # V [jvm.dll+0x643b06] HandshakeThreadsOperation::do_handshake+0x86
      #
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_tier1_serviceability\\scratch\\3\\hs_err_pid36392.mdmp
      #
      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_tier1_serviceability\\scratch\\3\\hs_err_pid36392.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      [5.328s][debug][safepoint ] Safepoint synchronization initiated using semaphore wait barrier. (9 threads)
      [5.328s][trace][safepoint ] Setting thread local yield flag for threads
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.328s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.328s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.328s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.328s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.328s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.328s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.328s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.329s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.351s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.358s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.385s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.385s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.406s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.406s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.414s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.414s][trace][safepoint ] JavaThread state: _thread_in_vm
      [5.478s][trace][safepoint ] Thread: 0x0000006e3cf98000 [0x6588] State: _running _at_poll_safepoint 0
      [5.478s][trace][safepoint ] JavaThread state: _thread_in_vm


      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x0000006e3cf98000): JavaThread "DestroyJavaVM" [_thread_in_vm, id=25992, stack(0x0000006e3c640000,0x0000006e3c740000)]

      Stack: [0x0000006e3c640000,0x0000006e3c740000], sp=0x0000006e3c73f690, free space=1021k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0x643b06] HandshakeThreadsOperation::do_handshake+0x86 (handshake.cpp:279)
      V [jvm.dll+0x644921] HandshakeState::process_self_inner+0x351 (handshake.cpp:338)
      V [jvm.dll+0xb5498a] SafepointMechanism::block_if_requested_slow+0x5a (safepointmechanism.cpp:104)
      V [jvm.dll+0xa61e1c] Mutex::lock_contended+0x19c (mutex.cpp:90)
      V [jvm.dll+0xa61baf] Mutex::lock+0x6f (mutex.cpp:112)
      V [jvm.dll+0xc52f21] Threads::remove+0x61 (thread.cpp:4538)
      V [jvm.dll+0xc4d4f7] JavaThread::exit+0x757 (thread.cpp:2190)
      V [jvm.dll+0xc4c66e] Threads::destroy_vm+0x24e (thread.cpp:4436)
      V [jvm.dll+0x72b499] jni_DestroyJavaVM+0xb9 (jni.cpp:4007)
      C [jli.dll+0x5373] JavaMain+0x18b (java.c:561)
      C [ucrtbase.DLL+0x203ba]
      C [KERNEL32.DLL+0x13f2]
      C [ntdll.dll+0x154f4]


      siginfo: EXCEPTION_ACCESS_VIOLATION (0xc0000005), reading address 0x0000006e77e1f098


      Started this bug as a P2 for initial triage since this is a Tier1 test failure.

            Assignee:
            Patricio Chilano Mateo
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: