8235515: TestBasicLogOutput.java crashes due to EXCEPTION_ACCESS_VIOLATION in HandshakeThreadsOperation::do_handshake

Signal _done sempahore after executing name() in log_debug()

Reviewed-by: dcubed, mdoerr